Sort Reviews

We have a score about comment as "usefulness" use it for sorting,
and add 3 options for sorting: "Relevance" (user facing for usefulness)
rating (best to worst) and date (recent to old)

Adapt the header layout to fit the button sending the optional comment
"install to write a review" on a new line when it doesn't fit

![image](/uploads/037faae369e117aa74288a5f5ab65bc0/image.png)

![image](/uploads/929995ccdde59e46ce4732bad1649f6c/image.png)

BUG:436057